--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#ef4805">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/mia-consent-offline-form/manifest.json" />
     <link rel="icon" href="/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png" type="image/png" />
   </head>
   <body>
