--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mia Healthcare Consent Form</title>
-    <meta name="description" content="Offline dental consent form app for Mia Healthcare">
-    <meta name="theme-color" content="#ef4805">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
-    <link rel="manifest" href="/mia-consent-offline-form/manifest.json" />
-    <link rel="icon" href="/lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png" type="image/png" />
+    <meta name="description" content="Offline dental consent form app for Mia Healthcare" />
+    <meta name="theme-color" content="#ef4805" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+
+    <!-- Ensure all relative paths resolve from this base path -->
+    <base href="/mia-consent-offline-form/" />
+
+    <!-- Manifest and Favicon -->
+    <link rel="manifest" href="manifest.json" />
+    <link rel="icon" href="lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Use relative path assuming Vite is configured with correct base -->
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
