--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <base href="/mia-consent-offline-form/" />
 
     <!-- Manifest and Favicon -->
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/mia-consent-offline-form/manifest.json" />
     <link rel="icon" href="lovable-uploads/2741077b-1d2b-4fa2-9829-1d43a1a54427.png" type="image/png" />
   </head>
   <body>
