--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <link rel="icon" type="image/x-icon" href="%BASE_URL%favicon.ico" />
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="%BASE_URL%favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="/mia-consent-offline-form/manifest.json" />
-    <link rel="icon" href="/mia-consent-offline-form/favicon.ico" />
+    <meta name="theme-color" content="#ef4805" />
     <title>Mia Healthcare</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/mia-consent-offline-form/main.tsx"></script>
+    <script type="module" src="/main.tsx"></script>
   </body>
 </html>
