✅ Fix Vite PWA build by restoring root index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>HTML sanity check</title>
+    <meta http-equiv="refresh" content="0; url=./public/index.html" />
   </head>
   <body>
-    <h1 style="font-family: sans-serif; color: green">✅ Static page loaded</h1>
+    <p>Redirecting...</p>
   </body>
 </html>
